# bo_miniproject_02463

./: .gitignore  README.md  RESNET18_V3.ipynb  RESNET18_V3_med_plots.ipynb  botorch_headonly_runs.csv  main.py  pyproject.toml  resnet18.py
