[project]
name = "bo-miniproject-02463"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
