[project]
name = "bo-miniproject-02463"
version = "0.1.0"
description = "Bayesian Optimization mini project (02463)"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # --- Core numerical stack (MUST stay compatible with skopt) ---
    "numpy<2.0",
    "pandas<3.0",
    "scipy>=1.11,<1.12",
    "scikit-learn>=1.3,<1.4",
    "scikit-optimize==0.10.2",

    # --- PyTorch / BO stack ---
    "torch>=2.2",
    "torchvision>=0.17",
    "botorch>=0.10",
    "gpytorch>=1.11",
    "linear-operator>=0.5",

    # --- Notebook / plotting ---
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
